removed social links

--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -240,6 +240,7 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'sam.jpg'  %>
+              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -259,14 +260,15 @@
                   </li>
                 </ul>
               </div>
+              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Sam Abbassi 
               </h6>
-              <p class='text black' >Economics, Neuroscience <br/>
-                Co-Founder / Systems Engineering</p>
+              <p class='text black' > Co-Founder / Systems Engineering<br/>
+                Economics, Neuroscience</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -278,6 +280,7 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'chris.jpg'  %>
+              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -297,13 +300,14 @@
                   </li>
                 </ul>
               </div>
+              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Christopher Arguello
               </h6>
-              <p class='text black' >Co-Founder / Protocol Development <br/>
+              <p class='text black' >Co-Founder / Engineering Lead <br/>
                Project Management, Manufacturing </p>
             </div>
             <!-- End team-footer -->
@@ -315,6 +319,7 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'kevin.jpg'  %>
+              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -334,6 +339,7 @@
                   </li>
                 </ul>
               </div>
+              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -354,6 +360,7 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'luis.jpg'  %>
+              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -373,6 +380,7 @@
                   </li>
                 </ul>
               </div>
+              -->
               <!-- End social-wrap -->
             </div>
             <div class="team-footer">
@@ -390,6 +398,7 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'nicolas.jpg'  %>
+              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -409,6 +418,7 @@
                   </li>
                 </ul>
               </div>
+              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -428,6 +438,7 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'andres.jpg'  %>
+              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -447,6 +458,7 @@
                   </li>
                 </ul>
               </div>
+              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
