--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -23,18 +23,18 @@
       </div>
     </div>
     <div class="row" style="opacity: .6">
-      <div><p class="title-over-images"> Trusted by leading brands </p> </div>
+      <div><p class="title-over-images"> We leverage several technologies </p> </div>
       <div class="col-md-3 techno">
         <%= image_tag 'bitcoin.png' %>
+      </div>
+      <div class="col-md-3 techno">
+        <%= image_tag 'lightning.png' %>
       </div>
       <div class="col-md-3 techno">
         <%= image_tag 'ether.png' %>
       </div>
       <div class="col-md-3 techno">
         <%= image_tag 'rsk.png' %>
-      </div>
-      <div class="col-md-3 techno">
-        <%= image_tag 'lightning.png' %>
       </div>
     </div>
   </div>
@@ -236,31 +236,25 @@
     <div class="container">
       <div class="row pb50">
         <div class="col-sm-4">
-
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'sam.jpg'  %>
-              <!--
+
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
+                    <a href="https://www.linkedin.com/in/samabbassi/">
+                      <i class="fa fa-fw fa-linkedin"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                    <a href="https://twitter.com/samabbassi">
                       <i class="fa fa-fw fa-twitter"></i>
                     </a>
                   </li>
                 </ul>
               </div>
-              -->
+
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -280,27 +274,15 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'chris.jpg'  %>
-              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/christopherarguello/">
+                      <i class="fa fa-fw fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
               </div>
-              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -319,27 +301,15 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'kevin.jpg'  %>
-              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/kevinvanderpoll/">
+                      <i class="fa fa-fw fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
               </div>
-              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -360,34 +330,22 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'luis.jpg'  %>
-              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/luisthomas/">
+                      <i class="fa fa-fw fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
               </div>
-              -->
               <!-- End social-wrap -->
             </div>
             <div class="team-footer">
               <h6>Luis Thomas
               </h6>
               <p class='text black' >Wallet Development <br/>
-               Computer Science, Pura Vida </p>
+               Computer Science</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -398,27 +356,15 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'nicolas.jpg'  %>
-              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/nlevo/">
+                      <i class="fa fa-fw fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
               </div>
-              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -438,27 +384,15 @@
           <div class="team-item sm-mb40">
             <div class="team-header">
               <%= image_tag 'andres.jpg'  %>
-              <!--
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
+                    <a href="https://www.linkedin.com/in/andres-rojas-a82a3aaa/">
+                      <i class="fa fa-fw fa-linkedin"></i>
                     </a>
                   </li>
                 </ul>
               </div>
-              -->
               <!-- End social-wrap -->
             </div>
             <!-- End team-header -->
@@ -466,7 +400,69 @@
               <h6>Andres Rojas
               </h6>
               <p class='text black' >Full Stack Developer <br/>
-              Ping Pong Champion </p>
+              Web Development, Education</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+
+        <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <%= image_tag 'ariel.jpg' %>
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="https://www.linkedin.com/in/ariel-deschapell/">
+                      <i class="fa fa-fw fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://twitter.com/NotASithLord/">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ariel Deschapelle
+              </h6>
+              <p class='text black' >Crypto Developer <br/>
+              Journalism, Education</p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+
+        <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <%= image_tag 'katya.jpeg'  %>
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="https://www.linkedin.com/in/katyademina/">
+                      <i class="fa fa-fw fa-linkedin"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Katya Demina
+              </h6>
+              <p class='text black' >PR/Marketing <br/>
+              </p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -539,8 +535,6 @@
 
   </section>
  -->
-
-
 
 </main>
 
