--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -445,7 +445,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'katya.jpeg'  %>
+              <%= image_tag 'katya.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
