--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -90,7 +90,7 @@
       <!-- End footer-social -->
       <div class="footer-copy">
         <p>
-          Copyright &copy; 2018. Build with <i class="fa fa-heart" style="color: red;"></i> at Bushido Lab
+          Copyright &copy; 2018. Built with <i class="fa fa-heart" style="color: red;"></i> at Bushido Lab
         </p>
       </div>
       <!-- End footer-copy -->
