--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BushidoLandingPage</title>
+    <title>Bushido Lab</title>
     <%= csrf_meta_tags %>
 
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
