fixed typo in Nicks name, changed subscribe to submit for contact us section

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -44,7 +44,7 @@
           <div class="spacer-half"></div>
           <button class="btn line-hor" id="subscribe-user" data-url="<%= subscribe_users_path %>">
           <i class="mail icon"></i>
-            <span>Subscribe</span>
+            <span>Submit</span>
           </button>
           <!-- End contact-form -->
         </div>
