--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -369,7 +369,7 @@
             </div>
             <!-- End team-header -->
             <div class="team-footer">
-              <h6>Nicholas Levo
+              <h6>Nicolas Levo
               </h6>
               <p class='text black' >Protocol Development<br/>
                Computer Science, Hospitality </p>
