Add user send email and email content change

--- a/app/views/contact_mailer/user_send.html.erb
+++ b/app/views/contact_mailer/user_send.html.erb
@@ -4,6 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <p><%= "#{@contact[:email]} has filled out request form." %></p>
+    <h1>Welcome to Bushido Lab</h1>
+    <p>Thank You!</p>
   </body>
 </html>
