--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -2,11 +2,11 @@
 <!--   NAVBAR                 -->
 <!-- ************************ -->
 
-<div class="crazy-navbar">
+<div class="crazy-navbar <%= controller_name == 'home' && action_name == 'index' ? '' : 'changeColor' %>">
   <div class="container">
 
     <div class="crazy-logo">
-      <a href="/">
+      <a href="<%= root_path %>">
         <%= image_tag 'bushilogo.png' %>
       </a>
     </div>
